Minimized the example further and improved error description

--- a/server/assembly_list.html
+++ b/server/assembly_list.html
@@ -8,6 +8,9 @@
 		  method="get">
 		<label for="test-input">Enter anything and press Enter</label>
 		<input id="test-input" type="text" class="submit-on-enter submit-on-change">
+		<br /><br />
+		<label for="test-input2">Changing here does not cause the crash</label>
+		<input id="test-input2" type="text" class="submit-on-enter submit-on-change">
 	</form>
 </body>
 </html>
